--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@wharfkit/session": "^1.1.0"
     },
     "devDependencies": {
+        "@wharfkit/contract": "^1.1.0",
         "@rollup/plugin-alias": "^3.1.4",
         "@rollup/plugin-commonjs": "^22.0.0",
         "@rollup/plugin-json": "^4.1.0",
